[gd_scene load_steps=14 format=3 uid="uid://cio5dq42dnlps"]

[ext_resource type="Script" path="res://bullets/alt _fire.gd" id="1_mo8us"]
[ext_resource type="Texture2D" uid="uid://bsp04owo1li4x" path="res://pixel art/laser bullet.png" id="2_bssbm"]
[ext_resource type="PackedScene" uid="uid://sltxkgybombj" path="res://Stats/speed.tscn" id="4_855dl"]
[ext_resource type="PackedScene" uid="uid://dars5mmvvhu6t" path="res://actors/trail.tscn" id="4_uccwq"]
[ext_resource type="PackedScene" uid="uid://g57ejr7n7epa" path="res://States/parry_area.tscn" id="5_xe38g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecca1"]
size = Vector2(16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f2qbm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bssbm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrkli"]
size = Vector2(16, 16)

[sub_resource type="Curve" id="Curve_hj4nk"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_yvpe2"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.5), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_j4nos"]
resource_name = "cool lazer"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -40), Vector2(0, 0), Vector2(0, 40), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_14dhp"]
_data = {
"cool lazer": SubResource("Animation_j4nos")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_psot8"]
size = Vector2(16, 16)

[node name="Laser" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 16
motion_mode = 1
wall_min_slide_angle = 3.14159
script = ExtResource("1_mo8us")
bounces = 6
pierce = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ecca1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_f2qbm")
autoplay = "default"
frame_progress = 0.960726

[node name="kill_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["projectile"]]
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_mrkli")

[node name="speed" parent="." instance=ExtResource("4_855dl")]
speed = 5000.0

[node name="trail" parent="." instance=ExtResource("4_uccwq")]
width_curve = SubResource("Curve_hj4nk")
default_color = Color(0, 1, 0, 1)
lenght = 20

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, 5.36319)

[node name="trail2" parent="Node2D" instance=ExtResource("4_uccwq")]
width_curve = SubResource("Curve_yvpe2")
default_color = Color(0, 1, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Node2D/trail2")
libraries = {
"": SubResource("AnimationLibrary_14dhp")
}
autoplay = "cool lazer"

[node name="parry_area" parent="." instance=ExtResource("5_xe38g")]
collision_mask = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="parry_area"]
shape = SubResource("RectangleShape2D_psot8")

[connection signal="timeout" from="kill_timer" to="." method="_on_kill_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
